<resources>
    <string name="app_name">DemoApplication</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_form">FormActivity</string>

    <string name="firstNumber">Unesite prvi broj</string>
    <string name="secondNumber">Unesite drugi broj</string>

    <string name="add">Zbroji</string>
    <string name="multiply">Pomnoži</string>
    <string name="subtract">Oduzmi</string>
    <string name="divide">Podijeli</string>

    <string name="noInput">Ništa nije uneseno</string>


    <string name="instructionMessage">Izaberite operaciju</string>

    <string name="ERROR_DivByZero">ERROR: dijeljenje s nulom</string>
    <string name="ERROR_NaN">ERROR: operacija je nedefinarana za predane brojeve</string>


    <string name="title_activity_calculus">CalculusActivity</string>
    <string name="report">Pošalji izvještaj</string>
    <string name="returnResult">Vrati rezultat</string>
</resources>
