<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="j0036474052.android.fer.hr.FormActivity">

    
    
    <TextView
        android:text="@string/instructionMessage"
        android:textSize="15sp"
        android:id="@+id/tvCommand"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        />
    <View
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:layout_below="@id/tvCommand"
        android:background="@android:color/darker_gray"
        android:id="@+id/view" />

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/radioGroup"
        android:checkedButton="@+id/rbAdd"
        android:layout_below="@+id/tvCommand"
        android:layout_alignParentStart="true">

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/rbAdd"
            android:onClick="onRadioButtonClicked"
            android:hint="@string/add"/>

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/rbSub"
            android:onClick="onRadioButtonClicked"
            android:hint="@string/subtract"/>

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/rbMul"
            android:onClick="onRadioButtonClicked"
            android:hint="@string/multiply"/>

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/rbDiv"
            android:onClick="onRadioButtonClicked"
            android:hint="@string/divide"/>

    </RadioGroup>


    <EditText
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:id="@+id/etFirstNumber"
        android:hint="@string/firstNumber"
        android:inputType="numberSigned|numberDecimal"
        android:layout_below="@+id/radioGroup"
        android:layout_alignParentStart="true"
        android:layout_marginTop="26dp" />

    <EditText
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/etFirstNumber"
        android:hint="@string/secondNumber"
        android:inputType="numberSigned|numberDecimal"
        android:id="@+id/etSecondNumber"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="15sp"
        android:gravity="center"
        android:textColor="@android:color/holo_blue_dark"
        android:id="@+id/tvSum"
        android:layout_below="@+id/etSecondNumber"
        android:layout_alignParentStart="true"
        android:layout_marginTop="34dp" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/tvError"
        android:layout_below="@+id/tvSum"
        android:textSize="15sp"
        android:gravity="center"
        android:textColor="@android:color/holo_red_light"
        />
    <Button
        android:layout_width="200dp"
        android:id="@+id/buttonCalculate"
        android:layout_height="wrap_content"
        android:clickable="false"
        android:layout_below="@+id/tvError"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/report"
        android:id="@+id/buttonReport"
        android:layout_below="@+id/buttonCalculate"
        android:layout_alignStart="@+id/buttonCalculate"
        android:layout_marginTop="53dp" />


</RelativeLayout>
